fixed timer and aligned icon vertically

--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,7 @@ button {
 
 #share-button i, #completion-share-button i {
     font-size: 16px;
+    vertical-align: middle;
 }
 
 #title-container {
